[package]
name = "confd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.3.0", features = ["derive"]}
color-eyre = "0.6.2"
eyre = "0.6.8"

# async
tokio = { version = "1.20.1", features = ["full"] }

# tracing crates
tracing = "0.1.36"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
